src/objects/hed__Affl_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>hed__Account_Record_Type__c</fullName>
        <description>The Account Record Type label.</description>
        <inlineHelpText>The Account Record Type label.</inlineHelpText>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Auto_Program_Enrollment_Role__c</fullName>
        <label>Auto Enrollment Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Auto_Program_Enrollment_Status__c</fullName>
        <label>Auto Enrollment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Auto_Program_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a Program Enrollment record will be automatically created when the user creates an Affiliation to an Account of this type.</description>
        <inlineHelpText>If checked, a Program Enrollment record will be automatically created when the user creates an Affiliation to an Account of this type.</inlineHelpText>
        <label>Auto Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Affl_Field__c</fullName>
        <description>The label of the lookup field or the API name of the lookup field in Contact that points to the primary Account of the specified Record Type.</description>
        <inlineHelpText>The label of the lookup field in Contact that points to the primary Account of the specified Record Type.</inlineHelpText>
        <label>Primary Affl Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Affl Mappings</label>
</CustomObject>